# tech-challenges

./: .gitignore
back_end/dotnet_version/anti_patterns/: AntiPatternsChallenge.csproj
back_end/dotnet_version/anti_patterns/Middlewares/: ExceptionMiddleware.cs
back_end/dotnet_version/bot/: UserExportWorker.cs
back_end/java_version/anti_patterns/: pom.xml
back_end/maya/: challenge.md  challenge_express.md  requests_e_responses_apis_questao_1.json
back_end/maya/bot/: UserExportBot.java
back_end/teahupoo/: challenge.md  challenge_express.md
back_end/teahupoo/anti_patterns/Infrastructure/: MyDbContext.cs
back_end/teahupoo/anti_patterns/Middlewares/: Exceptions.cs  Tools.cs
back_end/waimea/: challenge.md  event_scheduler.py  launch_api.py
back_end/waimea/anti_patterns/: pyproject.toml
back_end/waimea/anti_patterns/src/: app.py  config.py
back_end/waimea/anti_patterns/src/endpoints/health/: controllers.py  repository.py  service.py
back_end/waimea/anti_patterns/src/endpoints/registration/: controllers.py  exceptions.py  manager.py  models.py  repository.py  service.py
back_end/waimea/anti_patterns/src/infrastructure/: containers.py
back_end/waimea/anti_patterns/src/infrastructure/database/: idatabase.py  sql.py
back_end/waimea/anti_patterns/src/infrastructure/repositories/: irepository.py  sql_repository.py
back_end/waimea/anti_patterns/src/middlewares/: exception_handler.py  exceptions.py  tools.py
devops/garapua/: .gitignore  README.md
devops/garapua/base-test-api/: Pipfile  start.py
devops/garapua/base-test-api/base_test_api/: app.py  config.py  health.py
devops/navagio/: CHALLENGE.md  README.md
devops/navagio/api_rest/: README.md  app.py  pyproject.toml
devops/navagio/async_worker/: README.md  app.py  pyproject.toml
front_end/: challenge.md
front_end/jaws/: challenge.md
front_end/shipay-react-app/: App.js  data.js
(+14 files in other folders)
